objects/ssot__ClaimDiagnosis__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClaimDiagnosis_ClaimId_map_Claim_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimDiagnosis_ClaimId_map_Claim_Id_N_1</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>ClaimDiagnosis_ClaimId_map_Claim_Id_N_1</relationshipLabel>
        <relationshipName>ClaimDiagnosis_ClaimId_map_Claim_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisReferenceObject__c</fullName>
        <label>Diagnosis Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisReferenceRecordId__c</fullName>
        <label>Diagnosis Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Diagnosis Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659063260_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimDiagnosis_DiagnosisReferenceRec_rel</label>
        <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
        <relationshipLabel>ClaimDiagnosis_DiagnosisReferenceRec_rel</relationshipLabel>
        <relationshipName>rel_1731659063260_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>